[project]
name = "graph-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gensim>=4.3",
    "gliner>=0.2",
    "gliner-spacy>=0.0",
    "glirel>=0.1",
    "lancedb>=0.11",
    "loguru>=0.7.3",
    "networkx>=3.3",
    "pip>=25.0.1",
    "pyvis>=0.3",
    "spacy>=3.7",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
download_model = "uv run spacy download en_core_web_md"
